I will need more UI

--- a/Source/ChromeCast.Desktop.AudioStreamer/ChromeCast.Desktop.AudioStreamer.csproj
+++ b/Source/ChromeCast.Desktop.AudioStreamer/ChromeCast.Desktop.AudioStreamer.csproj
@@ -37,6 +37,7 @@
     <ApplicationIcon>ChromeCast.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="System" />
     <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Windows" />
     <Reference Include="System.Drawing" />
