--- a/Source/MiniCast.Client/packages.config
+++ b/Source/MiniCast.Client/packages.config
@@ -2,8 +2,11 @@
 <packages>
   <package id="CommonServiceLocator" version="2.0.4" targetFramework="net472" />
   <package id="ControlzEx" version="3.0.2.4" targetFramework="net472" />
+  <package id="Fody" version="3.3.2" targetFramework="net472" developmentDependency="true" />
   <package id="MahApps.Metro" version="1.6.5" targetFramework="net472" />
   <package id="MahApps.Metro.IconPacks" version="2.3.0" targetFramework="net472" />
   <package id="MvvmLight" version="5.4.1.1" targetFramework="net472" />
   <package id="MvvmLightLibs" version="5.4.1.1" targetFramework="net472" />
+  <package id="PropertyChanged.Fody" version="2.6.0" targetFramework="net472" />
+  <package id="Rssdp" version="4.0.2" targetFramework="net472" />
 </packages>
