--- a/Source/MiniCast.Client/packages.config
+++ b/Source/MiniCast.Client/packages.config
@@ -3,6 +3,7 @@
   <package id="BouncyCastle.NetCore" version="1.8.3" targetFramework="net472" />
   <package id="CommonServiceLocator" version="2.0.4" targetFramework="net472" />
   <package id="ControlzEx" version="3.0.2.4" targetFramework="net472" />
+  <package id="CSCore" version="1.2.1.2" targetFramework="net472" />
   <package id="Fody" version="3.3.2" targetFramework="net472" developmentDependency="true" />
   <package id="MahApps.Metro" version="1.6.5" targetFramework="net472" />
   <package id="MahApps.Metro.IconPacks" version="2.3.0" targetFramework="net472" />
@@ -10,6 +11,7 @@
   <package id="Microsoft.Win32.Primitives" version="4.0.1" targetFramework="net472" />
   <package id="MvvmLight" version="5.4.1.1" targetFramework="net472" />
   <package id="MvvmLightLibs" version="5.4.1.1" targetFramework="net472" />
+  <package id="NAudio" version="1.8.5" targetFramework="net472" />
   <package id="NETStandard.Library" version="1.6.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net472" />
   <package id="PropertyChanged.Fody" version="2.6.0" targetFramework="net472" />
@@ -18,6 +20,7 @@
   <package id="Q42.HueApi.Entertainment" version="3.8.1" targetFramework="net472" />
   <package id="Rssdp" version="4.0.2" targetFramework="net472" />
   <package id="System.AppContext" version="4.1.0" targetFramework="net472" />
+  <package id="System.Buffers" version="4.5.0" targetFramework="net472" />
   <package id="System.Collections" version="4.0.11" targetFramework="net472" />
   <package id="System.Collections.Concurrent" version="4.0.12" targetFramework="net472" />
   <package id="System.Console" version="4.0.0" targetFramework="net472" />
