--- a/Source/MiniCast.Client/App.config
+++ b/Source/MiniCast.Client/App.config
@@ -26,8 +26,14 @@
   </runtime>
   <userSettings>
     <MiniCast.Client.Properties.Settings>
-      <setting name="Setting" serializeAs="String">
-        <value>Test</value>
+      <setting name="Bins" serializeAs="String">
+        <value>100</value>
+      </setting>
+      <setting name="Rate" serializeAs="String">
+        <value>50</value>
+      </setting>
+      <setting name="Normal" serializeAs="String">
+        <value>255</value>
       </setting>
     </MiniCast.Client.Properties.Settings>
   </userSettings>
