--- a/Source/MiniCast.Client/packages.config
+++ b/Source/MiniCast.Client/packages.config
@@ -19,6 +19,8 @@
   <package id="Q42.HueApi.ColorConverters" version="3.8.1" targetFramework="net472" />
   <package id="Q42.HueApi.Entertainment" version="3.8.1" targetFramework="net472" />
   <package id="Rssdp" version="4.0.2" targetFramework="net472" />
+  <package id="SharpDX" version="4.2.0" targetFramework="net472" />
+  <package id="SharpDX.D3DCompiler" version="4.2.0" targetFramework="net472" />
   <package id="System.AppContext" version="4.1.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.0" targetFramework="net472" />
   <package id="System.Collections" version="4.0.11" targetFramework="net472" />
